<resources>
    <string name="lang">en</string>
    <string name="app_name" translatable="false">Skyline</string>
    <string name="login_skyline_community">Login in the Skyline community</string>
    <string name="sign_with_email">Sign in with Email</string>
    <string name="sign_with_google">Sign in with Google</string>
    <string name="i_accept_terms_conditions">I accept all terms and conditions</string>
    <string name="create_account">Create Account</string>
    <string name="please_accept_terms_and_conditions">You must accept all terms and conditions!</string>
    <string name="google_sign_not_available">Sign in with Google is not yet available.</string>
    <string name="welcome_again">Welcome again 👋🏻</string>
    <string name="login_your_account">Login to your Skyline account now.</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_button">Continue</string>
    <string name="please_enter_email">Please enter E-Mail</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="skyline_create_account">Create Account 🎉</string>
    <string name="join_skyline_community">Join the Skyline community by creating your account now 😊</string>
    <string name="complete_profile_title">Complete Your Profile</string>
    <string name="complete_profile_subtitle">Now finish account creation by completing your profile or skip profile completion step using skip button.</string>
    <string name="primary_details_title">Primary Details</string>
    <string name="primary_details_subtitle">Profile photo, username, nickname and bio that appear on your profile.</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="biography">Biography</string>
    <string name="gender_title">Gender</string>
    <string name="gender_subtitle">By specifying your gender in your profile, you can get other people to know you and you can be recommended to people who use filters, thus increasing your interaction.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_gone_title">I do not want to specify</string>
    <string name="skip_button">Skip</string>
    <string name="invalid_email_adress">Invalid e-mail adress</string>
    <string name="info">INFO</string>
    <string name="cancel_complete_profile_warn">You are about to cancel the profile completion phase! If you leave this stage, your e-mail account will be kept, then you will be redirected to this page by logging in instead of creating an account. If you want, you can remove your e-mail from our server.</string>
    <string name="cancel_complete_profile_warn2">Are you sure you want to cancel the profile completion phase?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="email_verification_title">Email Verification</string>
    <string name="email_verification_subtitle">Verify the email account linked to your account now. If you continue without verifying your e-mail account, you can only preview the content of the application and will not be able to interact.</string>
    <string name="send">SEND</string>
    <string name="email_verification_success_text">Verification link has been successfully sent to your e-mail address! Confirm your e-mail address by clicking the incoming link, then check it by clicking the refresh button. If you can’t find the email link, check the spam folder.</string>
    <string name="okay">OKAY</string>
    <string name="email_verified">E-mail verified</string>
    <string name="email_not_verified">E-mail not verified</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_username">Please enter username</string>
    <string name="username_err_3_characters">Username can be at least 3 characters</string>
    <string name="username_err_25_characters">Username can be up to 25 characters</string>
    <string name="username_err_one_letter">Username must contain at least one letter</string>
    <string name="username_err_invalid_characters">Username contains invalid characters</string>
    <string name="username_err_already_taken">Username already taken</string>
    <string name="username_err_invalid">Invalid username</string>
    <string name="nickname_err_30_characters">Nickname can be up to 30 characters</string>
    <string name="biography_err_250_characters">Biography can be up to 250 characters</string>
    <string name="cancel_create_account_warn">You are about to cancel account creation! If you cancel this action, your e-mail information will be removed from our server. Therefore, when you log in again later, you will need to register on the new account creation page and reconfirm your email.</string>
    <string name="cancel_create_account_warn2">Are you sure you want to cancel account creation?</string>
    <string name="invalid_profile_image_file">The profile photo you selected appears as an unsupported file type! Please choose "png" or "jpg" type image.</string>
    <string name="add_story">Add Story</string>
    <string name="home_hello">Hello</string>
    <string name="whats_new_today">What’s new today?</string>
    <string name="text_post_err_500_characters">The text post can have a maximum of 500 characters.</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="publish">Publish</string>
    <string name="post_publish_success">Post published</string>
    <string name="oh_there_us_a_problem">Oh! There is a problem :(</string>
    <string name="reasons_may_be">Reasons may be:</string>
    <string name="err_no_internet">• You have no or weak internet connection.</string>
    <string name="err_app_maintenance">• The application may be under maintenance.</string>
    <string name="err_problem_on_our_side">• There may be technical problems on our side.</string>
    <string name="retry">Retry</string>
    <string name="stories">Stories</string>
    <string name="image_posts">Image Posts</string>
    <string name="text_posts">Text Posts</string>
    <string name="video_posts">Video Posts</string>
    <string name="recommended_users">Recommended Users</string>
    <string name="recommended_posts">Recommended Posts</string>
    <string name="followed_users_posts">Followed Users Posts</string>
    <string name="search">Search</string>
    <string name="no_user_found">No user found with this username :(</string>
    <string name="no_description">No Description</string>
    <string name="original_sound">Original Sound</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="no_comment_yet">No comments yet!</string>
    <string name="write_firts_comment">Write the first comment now.</string>
    <string name="liked_by_publisher">Liked by Publisher</string>
    <string name="show_more_comments">Show more comments.</string>
    <string name="comment_liked_by_publisher">This comment was liked by the publisher</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="create_post">Create Post</string>
    <string name="create_complete_post_details">Complete post details</string>
    <string name="create_complete_post_description">Post description</string>
    <string name="debug_subtitle">We are sad! An error has occurred in the application, please report this error to us. We will try to fix it.</string>
    <string name="close_app">Close App</string>
    <string name="report_error">Report Error</string>
    <string name="profile_tab">PROFILE</string>
    <string name="posts_tab">POSTS</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="admin">Admin</string>
    <string name="moderator">Moderator</string>
    <string name="supporter">Supporter</string>
    <string name="verified_account">Verified Account</string>
    <string name="chat">Chat</string>
    <string name="gift">Gift</string>
    <string name="block">Block</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_dialog">Are you sure you want to follow this user?</string>
    <string name="unfollow_dialog">Are you sure you want to unfollow this user?</string>
    <string name="m_edit">Edit</string>
    <string name="m_reply">Reply</string>
    <string name="m_copy">Copy</string>
    <string name="m_translate">Translate</string>
    <string name="m_delete">Delete</string>
    <string name="m_message">Message</string>
    <string name="m_no_inbox">You don’t have anyone to chat with yet</string>
    <string name="m_no_posts">This user hasn’t shared a post yet</string>
    <string name="m_no_chats">You don’t have any chats with this user yet</string>
    <string name="explore">Explore</string>
    <string name="statistics_settings">Statistics Settings</string>
    <string name="hide_the_number_of_views">Hide the number of views</string>
    <string name="hide_the_number_of_views_subtitle">Activate this to hide the number of views</string>
    <string name="hide_the_number_of_likes">Hide the number of likes</string>
    <string name="hide_the_number_of_likes_subtitle">Activate this to hide the number of likes</string>
    <string name="hide_the_number_of_comments">Hide the number of comments</string>
    <string name="hide_the_number_of_comments_subtitle">Activate this to hide the number of comments</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="hide_post_from_everyone">Hide post from everyone</string>
    <string name="hide_post_from_everyone_subtitle">Enable this to hide the post from everyone but comments are not supported on private posts and all comments will be deleted if you have already created this post.</string>
    <string name="disable_saving_to_favorites">Disable saving to favorites</string>
    <string name="disable_saving_to_favorites_subtitle">Enable this if you don’t want users to favorite this post.</string>
    <string name="disable_comments">Disable comments</string>
    <string name="disable_comments_subtitle">Enable this to turn off comments. If your post already has comments, activating it will not delete previous comments.</string>
    <string name="use_url">Use Url</string>
    <string name="profile_image_url">Profile Image Url</string>
    <string name="profile_cover_image_url">Cover Image Url</string>
    <string name="fill_all_items">Fill All İtems</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="local_psts">Local</string>
    <string name="public_psts">Global</string>
    <string name="followed_psts">Followeds</string>
    <string name="favorites_psts">Favorites</string>
    <string name="not_found_public_posts">There are no global posts yet.</string>
    <string name="not_found_local_posts">There are no local posts yet.</string>
    <string name="not_found_followings">You don’t follow anyone yet.</string>
    <string name="banned_access_denied">Access Denied</string>
    <string name="banned_access_denied_subtext">Recently, we observed that you have been doing activities against our community guidelines on your account, and as a result, we have blocked your account.</string>
    <string name="banned_create_request">Create Request</string>
</resources>