<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/body"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/dialog_body"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="14dp"
			android:background="#FFFFFF"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/ic"
				android:focusable="false"
				android:layout_width="90dp"
				android:layout_height="90dp"
				android:src="@drawable/risk"
				android:scaleType="centerCrop" />
			<TextView
				android:id="@+id/title"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="25sp"
				android:textStyle="bold"
				android:textColor="#000000"
				tools:replace="android:text"
				android:text="@string/banned_access_denied" />
			<TextView
				android:id="@+id/subtext"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="14dp"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:gravity="center_horizontal"
				android:textSize="18sp"
				android:textColor="#000000"
				tools:replace="android:text"
				android:text="@string/banned_access_denied_subtext" />
			<TextView
				android:id="@+id/create_request_button"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="14dp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:background="#000000"
				android:gravity="center_horizontal|center_vertical"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#FFFFFF"
				tools:replace="android:text"
				android:text="@string/banned_create_request" />
			<TextView
				android:id="@+id/close_app_button"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:background="#F5F5F5"
				android:gravity="center_horizontal|center_vertical"
				android:textSize="16sp"
				android:textStyle="bold"
				android:textColor="#000000"
				tools:replace="android:text"
				android:text="@string/close_app" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
