<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#FFFFFF"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/top"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:background="#FFFFFF"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<ImageView
				android:id="@+id/back"
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_marginRight="8dp"
				android:padding="12dp"
				android:src="@drawable/ic_arrow_back_black"
				android:scaleType="fitCenter" />
			<LinearLayout
				android:id="@+id/topSpc"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginRight="8dp"
				android:gravity="center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="#000000"
					tools:replace="android:text"
					android:text="@string/create_post" />
				<TextView
					android:id="@+id/subtitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="18sp"
					android:textColor="#757575"
					tools:replace="android:text"
					android:text="@string/create_complete_post_details" />
			</LinearLayout>
			<TextView
				android:id="@+id/continueButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="8dp"
				android:paddingLeft="16dp"
				android:paddingTop="6dp"
				android:paddingRight="16dp"
				android:paddingBottom="6dp"
				android:background="#2196F3"
				android:textSize="20sp"
				android:textColor="#FFFFFF"
				tools:replace="android:text"
				android:text="@string/publish" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/topSpace"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:padding="8dp"
			android:background="#F5F5F5"
			android:orientation="horizontal" />
		<ScrollView
			android:id="@+id/scroll"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<LinearLayout
				android:id="@+id/scrollBody"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/PostInfoTop1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<androidx.cardview.widget.CardView
						android:id="@+id/cropperImageCard"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="16dp"
						android:gravity="center_horizontal|center_vertical"
						app:cardElevation="1dp">
						<ImageView
							android:id="@+id/croppedImageView"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:src="@drawable/default_image"
							android:scaleType="fitCenter" />
					</androidx.cardview.widget.CardView>
					<EditText
						android:id="@+id/postDescription"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:layout_marginBottom="16dp"
						android:padding="16dp"
						android:background="#F5F5F5"
						android:textSize="18sp"
						android:textColor="#000000"
						android:textColorHint="#757575"
						android:layout_weight="1"
						tools:replace="android:hint"
						android:hint="@string/create_complete_post_description"
						android:maxLength="250" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/topSpace2"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:padding="8dp"
					android:orientation="horizontal" />
				<LinearLayout
					android:id="@+id/spc2"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:padding="8dp"
					android:background="#ECEFF1"
					android:orientation="horizontal" />
				<LinearLayout
					android:id="@+id/post_settings_statistics"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<LinearLayout
						android:id="@+id/post_settings_statistics_top"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="16dp"
						android:paddingTop="12dp"
						android:paddingRight="16dp"
						android:paddingBottom="12dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/post_settings_statistics_top_ic"
							android:layout_width="28dp"
							android:layout_height="28dp"
							android:layout_marginRight="16dp"
							android:padding="3dp"
							android:src="@drawable/statistics_ic"
							android:scaleType="fitCenter" />
						<TextView
							android:id="@+id/post_settings_statistics_top_title"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="18sp"
							android:textStyle="bold"
							android:textColor="#000000"
							android:layout_weight="1"
							tools:replace="android:text"
							android:text="@string/statistics_settings" />
						<ImageView
							android:id="@+id/post_settings_statistics_top_arrow"
							android:layout_width="28dp"
							android:layout_height="28dp"
							android:padding="2dp"
							android:src="@drawable/ic_keyboard_arrow_down_black"
							android:scaleType="fitCenter" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/post_settings_statistics_middle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">
						<LinearLayout
							android:id="@+id/post_settings_statistics_hide_views"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingLeft="16dp"
							android:paddingTop="8dp"
							android:paddingRight="16dp"
							android:paddingBottom="12dp"
							android:orientation="vertical">
							<androidx.appcompat.widget.SwitchCompat
								android:id="@+id/post_settings_statistics_hide_views_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="4dp"
								android:gravity="left|center_vertical"
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="#000000"
								tools:replace="android:text"
								android:text="@string/hide_the_number_of_views"
								android:clickable="false"
								android:thumb="@drawable/switchin"
								app:track="@drawable/switchout" />
							<TextView
								android:id="@+id/post_settings_statistics_hide_views_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								android:textColor="#616161"
								tools:replace="android:text"
								android:text="@string/hide_the_number_of_views_subtitle" />
						</LinearLayout>
						<LinearLayout
							android:id="@+id/post_settings_statistics_hide_likes"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingLeft="16dp"
							android:paddingTop="8dp"
							android:paddingRight="16dp"
							android:paddingBottom="12dp"
							android:orientation="vertical">
							<androidx.appcompat.widget.SwitchCompat
								android:id="@+id/post_settings_statistics_hide_likes_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="4dp"
								android:gravity="left|center_vertical"
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="#000000"
								tools:replace="android:text"
								android:text="@string/hide_the_number_of_likes"
								android:clickable="false"
								android:thumb="@drawable/switchin"
								app:track="@drawable/switchout" />
							<TextView
								android:id="@+id/post_settings_statistics_hide_likes_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								android:textColor="#616161"
								tools:replace="android:text"
								android:text="@string/hide_the_number_of_likes_subtitle" />
						</LinearLayout>
						<LinearLayout
							android:id="@+id/post_settings_statistics_hide_comments"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingLeft="16dp"
							android:paddingTop="8dp"
							android:paddingRight="16dp"
							android:paddingBottom="12dp"
							android:orientation="vertical">
							<androidx.appcompat.widget.SwitchCompat
								android:id="@+id/post_settings_statistics_hide_comments_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="4dp"
								android:gravity="left|center_vertical"
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="#000000"
								tools:replace="android:text"
								android:text="@string/hide_the_number_of_comments"
								android:clickable="false"
								android:thumb="@drawable/switchin"
								app:track="@drawable/switchout" />
							<TextView
								android:id="@+id/post_settings_statistics_hide_comments_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								android:textColor="#616161"
								tools:replace="android:text"
								android:text="@string/hide_the_number_of_comments_subtitle" />
						</LinearLayout>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/spc3"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:padding="8dp"
					android:background="#ECEFF1"
					android:orientation="horizontal" />
				<LinearLayout
					android:id="@+id/post_settings_privacy"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical">
					<LinearLayout
						android:id="@+id/post_settings_privacy_top"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="16dp"
						android:paddingTop="12dp"
						android:paddingRight="16dp"
						android:paddingBottom="12dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:id="@+id/post_settings_privacy_top_ic"
							android:layout_width="28dp"
							android:layout_height="28dp"
							android:layout_marginRight="16dp"
							android:padding="4dp"
							android:src="@drawable/privacy_ic"
							android:scaleType="fitCenter" />
						<TextView
							android:id="@+id/post_settings_privacy_top_title"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="18sp"
							android:textStyle="bold"
							android:textColor="#000000"
							android:layout_weight="1"
							tools:replace="android:text"
							android:text="@string/privacy_settings" />
						<ImageView
							android:id="@+id/post_settings_privacy_top_arrow"
							android:layout_width="28dp"
							android:layout_height="28dp"
							android:padding="2dp"
							android:src="@drawable/ic_keyboard_arrow_down_black"
							android:scaleType="fitCenter" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/post_settings_privacy_middle"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">
						<LinearLayout
							android:id="@+id/post_settings_privacy_hide_post"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingLeft="16dp"
							android:paddingTop="8dp"
							android:paddingRight="16dp"
							android:paddingBottom="12dp"
							android:orientation="vertical">
							<androidx.appcompat.widget.SwitchCompat
								android:id="@+id/post_settings_privacy_hide_post_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="4dp"
								android:gravity="left|center_vertical"
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="#000000"
								tools:replace="android:text"
								android:text="@string/hide_post_from_everyone"
								android:clickable="false"
								android:thumb="@drawable/switchin"
								app:track="@drawable/switchout" />
							<TextView
								android:id="@+id/post_settings_privacy_hide_post_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								android:textColor="#616161"
								tools:replace="android:text"
								android:text="@string/hide_post_from_everyone_subtitle" />
						</LinearLayout>
						<LinearLayout
							android:id="@+id/post_settings_privacy_disable_save"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingLeft="16dp"
							android:paddingTop="8dp"
							android:paddingRight="16dp"
							android:paddingBottom="12dp"
							android:orientation="vertical">
							<androidx.appcompat.widget.SwitchCompat
								android:id="@+id/post_settings_privacy_disable_save_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="4dp"
								android:gravity="left|center_vertical"
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="#000000"
								tools:replace="android:text"
								android:text="@string/disable_saving_to_favorites"
								android:clickable="false"
								android:thumb="@drawable/switchin"
								app:track="@drawable/switchout" />
							<TextView
								android:id="@+id/post_settings_privacy_disable_save_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								android:textColor="#616161"
								tools:replace="android:text"
								android:text="@string/disable_saving_to_favorites_subtitle" />
						</LinearLayout>
						<LinearLayout
							android:id="@+id/post_settings_privacy_disable_comments"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:paddingLeft="16dp"
							android:paddingTop="8dp"
							android:paddingRight="16dp"
							android:paddingBottom="12dp"
							android:orientation="vertical">
							<androidx.appcompat.widget.SwitchCompat
								android:id="@+id/post_settings_privacy_disable_comments_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginBottom="4dp"
								android:gravity="left|center_vertical"
								android:textSize="18sp"
								android:textStyle="bold"
								android:textColor="#000000"
								tools:replace="android:text"
								android:text="@string/disable_comments"
								android:clickable="false"
								android:thumb="@drawable/switchin"
								app:track="@drawable/switchout" />
							<TextView
								android:id="@+id/post_settings_privacy_disable_comments_subtitle"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								android:textColor="#616161"
								tools:replace="android:text"
								android:text="@string/disable_comments_subtitle" />
						</LinearLayout>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/spc4"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:padding="8dp"
					android:background="#ECEFF1"
					android:orientation="horizontal" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>
